[package]
name = "glr"
version = "0.2.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2021"
description = "RNGLR parser generator"
homepage = "https://github.com/axelf4/glr"
repository = "https://github.com/axelf4/glr"
license = "Apache-2.0"
keywords = ["parser", "LR", "grammar"]
categories = ["parsing"]

[dependencies]
petgraph = { version = "0.6.0", default-features = false }
smallvec = { version = "1.9.0", features = ["union"] }
